# todolist

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: push_any_except_main.yaml
core/: admin.py
core/migrations/: 0001_initial.py
djangoProject/: settings.py
